fixed white space that appeared under 1080px vw

--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -59,6 +59,6 @@
     display: block;
   }
   .text {
-    display: block;
+    max-width: 90vw;
   }
 }
